When m_state != CONNECTING, it means WebSocket is closing, and WebSocket::didClose will be invoked automatically. So it is not necessary to call didClose function immediately. And it will result in "onerror can't be triggered" error in WorkerContext.

The patch is migrated from WebKit. See: https://bugs.webkit.org/show_bug.cgi?id=89153

BUG=132898

Review URL: https://codereview.chromium.org/13946005

Patch from Li Yin <li.yin@intel.com>.

git-svn-id: svn://svn.chromium.org/blink/trunk@148988 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 0c76c492d398fc824f28a7dff3174b8447caeeb9